--- a/tests/resources/retroarchcustom.cfg
+++ b/tests/resources/retroarchcustom.cfg
@@ -36,7 +36,7 @@ input_player2_analog_dpad_mode = "1"
 input_player3_analog_dpad_mode = "1"
 input_player4_analog_dpad_mode = "1"
 
-input_enable_hotkey_btn = "16"
+input_enable_hotkey_btn = 10
 
 input_enable_hotkey = "escape"
 input_exit_emulator = "escape"
