--- a/tests/resources/retroarchcustom.cfg
+++ b/tests/resources/retroarchcustom.cfg
@@ -4,10 +4,10 @@ system_directory = /recalbox/share/bios/
 
 config_save_on_exit = false
 
-video_threaded = false
+video_threaded = "true"
 
-video_aspect_ratio = 1
-#aspect_ratio_index = 1
+#video_aspect_ratio = 1.33
+aspect_ratio_index = 0
 #video_force_aspect = false
 video_aspect_ratio_auto = false
 #video_scale_integer = true
@@ -41,8 +41,3 @@ input_enable_hotkey_btn = 10
 input_enable_hotkey = "escape"
 input_exit_emulator = "escape"
 video_shader = myshaders.gpslp
-input_player3_joypad_index = 1
-input_player2_joypad_index = 2
-input_player1_joypad_index = 3
-input_player4_joypad_index = 0
-unbelievablevalue = false
