--- a/configgen/tests/resources/retroarchcustom.cfg
+++ b/configgen/tests/resources/retroarchcustom.cfg
@@ -4,12 +4,12 @@ system_directory = /recalbox/share/bios/
 
 config_save_on_exit = false
 
-video_threaded = "true"
+video_threaded = false
 
-#video_aspect_ratio = 1.33
-aspect_ratio_index = 0
+video_aspect_ratio = 1
+#aspect_ratio_index = 1
 #video_force_aspect = false
-video_aspect_ratio_auto = false
+video_aspect_ratio_auto = true
 #video_scale_integer = true
 
 rewind_enable = false
@@ -18,8 +18,8 @@ rewind_granularity = 2
 
 video_gpu_screenshot = true
 
-video_shader_enable = true
-video_smooth = false
+video_shader_enable = false
+video_smooth = true
 
 screenshot_directory = /recalbox/share/screenshots/
 savestate_directory = /recalbox/share/saves/
@@ -36,8 +36,8 @@ input_player2_analog_dpad_mode = "1"
 input_player3_analog_dpad_mode = "1"
 input_player4_analog_dpad_mode = "1"
 
-input_enable_hotkey_btn = 10
+input_enable_hotkey_btn = "16"
 
 input_enable_hotkey = "escape"
 input_exit_emulator = "escape"
-video_shader = myshaders.gpslp
+unbelievablevalue = false
